--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "header responsive by moddev",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && NODE_ENV=production babel index.js --out-dir dist --copy-files"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,12 @@
   },
   "homepage": "https://github.com/GEBASOFT/header-responsive#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6"
   }
 }
